# btc_horcrux

./: CMakeLists.txt  LICENSE  README.md
include/: algebra.h
src/: main.cpp
tests/: test_algebra.cpp
